Implemented Amenity management features including creation, retrieval, and linking to properties